@@ -240,6 +240,9 @@ Core and builtins
 Library
 -------
 
+- EUC-KR codec now handles the cheot-ga-keut composed make-up hangul
+  syllables.
+
 - GB18030 codec now can encode additional two-byte characters that
   are missing in GBK.
 
